--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\nsuma\AppData\Local\Temp\testng-eclipse-1833399141\testng-customsuite.xml</span>
+                    <span>C:\Users\einst\AppData\Local\Temp\testng-eclipse-432358865\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -155,7 +155,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\nsuma\AppData\Local\Temp\testng-eclipse-1833399141\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\einst\AppData\Local\Temp\testng-eclipse-432358865\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -216,16 +216,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'testRunner.TestNGTestRunner')
-data.setCell(0, 3, 6858);
+data.setCell(0, 3, 49172);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
 data.setCell(1, 2, 'testRunner.TestNGTestRunner')
-data.setCell(1, 3, 6858);
+data.setCell(1, 3, 48853);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -253,20 +253,20 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">testRunner.TestNGTestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@3f446bef)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@33e01298)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("User verify product in landing page", "Verifying and Selecting Product")</span>
-                <span class="method-start">307 ms</span>
+                <span class="method-start">6425 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("User verify product in landing page", "Verifying and Selecting Product")</span>
-                <span class="method-start">307 ms</span>
+                <span class="method-start">6431 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">7165 ms</span>
+                <span class="method-start">55604 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
