--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-passed">Default suite</span>
+              <span class="suite-name border-failed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\einst\AppData\Local\Temp\testng-eclipse-432358865\testng-customsuite.xml</span>
+                    <span>C:\Users\einst\AppData\Local\Temp\testng-eclipse-460053087\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,26 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods, 2 failed,   1 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Default_suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">runScenario("User verify product in landing page", "Verifying and Selecting Product")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Default_suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,12 +123,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">runScenario("User verify product in landing page", "Verifying and Selecting Product")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">runScenario("User verify product in landing page", "Verifying and Selecting Product")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;User increments his product quantity&quot;, &quot;Placing Order&quot;)">runScenario("User increments his product quantity", "Placing Order")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -124,9 +138,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-passed">
+          <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">testRunner.TestNGTestRunner</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -136,16 +150,56 @@
                   </a> <!-- runScenario("User verify product in landing page", "Verifying and Selecting Product") -->
                   <span class="method-name">runScenario</span>
                   <span class="parameters">("User verify product in landing page", "Verifying and Selecting Product")</span>
+                  <div class="stack-trace">java.io.FileNotFoundException: C:\Users\einst\eclipse-workspace-new\Cucumber\src\test\resource2\SampleExcel.xlsx
+	at org.apache.poi.ss.usermodel.WorkbookFactory.create(WorkbookFactory.java:317)
+	at org.apache.poi.ss.usermodel.WorkbookFactory.create(WorkbookFactory.java:295)
+	at org.apache.poi.ss.usermodel.WorkbookFactory.create(WorkbookFactory.java:276)
+	at testUtils.ExcelReader.getWorkBook(ExcelReader.java:45)
+	at testUtils.ExcelReader.getSheetByName(ExcelReader.java:35)
+	at testUtils.ExcelReader.getData(ExcelReader.java:24)
+	at stepDefinitions.ShoppingStepDef.user_search_the_product_from_and_rownumber(ShoppingStepDef.java:44)
+	at ✽.User search the product from &quot;product&quot; and rownumber 0(file:///C:/Users/einst/eclipse-workspace-new/Cucumber/src/test/java/Feature/01Shopping.feature:7)
+
+</div> <!-- stack-trace -->
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">
-                  </a> <!-- runScenario("User verify product in landing page", "Verifying and Selecting Product") -->
+                  <a name="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">
+                  </a> <!-- runScenario("Verify product in offerpage", "Verifying Product in OfferPage") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("User verify product in landing page", "Verifying and Selecting Product")</span>
+                  <span class="parameters">("Verify product in offerpage", "Verifying Product in OfferPage")</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [null] but found [Tomato]
+	at org.testng.Assert.fail(Assert.java:110)
+	at org.testng.Assert.failNotEquals(Assert.java:1413)
+	at org.testng.Assert.assertEqualsImpl(Assert.java:149)
+	at org.testng.Assert.assertEquals(Assert.java:131)
+	at org.testng.Assert.assertEquals(Assert.java:655)
+	at org.testng.Assert.assertEquals(Assert.java:665)
+	at stepDefinitions.OfferStepDef.user_check_if_the_product_exists(OfferStepDef.java:70)
+	at ✽.User check if the product exists Tom(file:///C:/Users/einst/eclipse-workspace-new/Cucumber/src/test/java/Feature/02Offer.feature:12)
+
+</div> <!-- stack-trace -->
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-failed -->
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">testRunner.TestNGTestRunner</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;User increments his product quantity&quot;, &quot;Placing Order&quot;)">
+                  </a> <!-- runScenario("User increments his product quantity", "Placing Order") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("User increments his product quantity", "Placing Order")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -155,7 +209,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\einst\AppData\Local\Temp\testng-eclipse-432358865\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\einst\AppData\Local\Temp\testng-eclipse-460053087\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -212,20 +266,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'testRunner.TestNGTestRunner')
-data.setCell(0, 3, 49172);
+data.setCell(0, 3, 18422);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
 data.setCell(1, 2, 'testRunner.TestNGTestRunner')
-data.setCell(1, 3, 48853);
+data.setCell(1, 3, 17389);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'runScenario')
+data.setCell(2, 2, 'testRunner.TestNGTestRunner')
+data.setCell(2, 3, 15255);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 51 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -253,20 +311,28 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">testRunner.TestNGTestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@33e01298)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@3005623b)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">runScenario("User verify product in landing page", "Verifying and Selecting Product")</span>
-                <span class="method-start">6425 ms</span>
+                <span class="method-start">928 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">runScenario("User verify product in landing page", "Verifying and Selecting Product")</span>
-                <span class="method-start">6431 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</span>
+                <span class="method-start">18324 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("User increments his product quantity", "Placing Order")</span>
+                <span class="method-start">36748 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">55604 ms</span>
+                <span class="method-start">52007 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
