--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b36d9e">  <td>22/06/02 13:59:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:testRunner.TestNGTestRunner@173ed316]">&lt;&lt;tearDownClass</td> 
+<tr bgcolor="b36d9e">  <td>22/06/02 15:03:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:testRunner.TestNGTestRunner@173ed316]">runScenario</td> 
+  <td>main@363023858</td>   <td></td> </tr>
+<tr bgcolor="b36d9e">  <td>22/06/02 15:03:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:testRunner.TestNGTestRunner@173ed316]">runScenario</td> 
+  <td>main@363023858</td>   <td></td> </tr>
+<tr bgcolor="b36d9e">  <td>22/06/02 15:03:15</td>   <td>-36737</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:testRunner.TestNGTestRunner@173ed316]">&gt;&gt;setUpClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@363023858</td>   <td></td> </tr>
-<tr bgcolor="b36d9e">  <td>22/06/02 13:58:27</td>   <td>-55594</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:testRunner.TestNGTestRunner@173ed316]">&gt;&gt;setUpClass</td> 
+<tr bgcolor="b36d9e">  <td>22/06/02 15:03:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:testRunner.TestNGTestRunner@173ed316]">runScenario</td> 
+  <td>main@363023858</td>   <td></td> </tr>
+<tr bgcolor="b36d9e">  <td>22/06/02 15:04:07</td>   <td>15259</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:testRunner.TestNGTestRunner@173ed316]">&lt;&lt;tearDownClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@363023858</td>   <td></td> </tr>
-<tr bgcolor="b36d9e">  <td>22/06/02 13:58:34</td>   <td>-49173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:testRunner.TestNGTestRunner@173ed316]">runScenario</td> 
-  <td>TestNG-PoolService-0@689144462</td>   <td></td> </tr>
-<tr bgcolor="b36d9e">  <td>22/06/02 13:58:34</td>   <td>-49173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:testRunner.TestNGTestRunner@173ed316]">runScenario</td> 
-  <td>TestNG-PoolService-0@689144462</td>   <td></td> </tr>
 </table>
